# cromptch

./: .env.example  .pre-commit-config.yaml  Cargo.toml  sqlx-data.json
.sqlx/: query-054b4fd1763a68a4d4cc71ef91edbea164ecbe28b170a28a662545811e498a2e.json  query-07f8ccf7872fc82d82a1e8e02565322f4ed07378e669bab12f6ef7467e83b701.json  query-0d083cce9454b7c38338a2eeb9a8ef8c9943a41a73860a7980115629820b02b8.json  query-134cb8c79a1a1e9256eb2465a98352904f882d859a7e68ca95cc0106180e9936.json  query-14de9d9a107f671c02b3364281b428b5c38adc35bfb5f55fd9ff7a7b49ed4c6e.json  query-1924c647f32419d9b8e8904b242cb783eff2496b4d63638a8fcb54240ab4c0f3.json  query-1a7b062485f0796b397908073ab68503aeb210ae2fc509302412533f41ba1d53.json  query-20ee37261bc0c0570b1f3b3247c1d8aa46b4eb2c672e9193c615c18f2d59c103.json  query-251c7d6440b0e054b9bd451131b75501a9094b03de83ada47448818a635cc05e.json  query-3518ac4e5ca16723d8e7b770623e00b9a08bd1204d73f9638ce9f63da229fa59.json  query-43f77a46cfbc3b356332cf15296115767b1474a32922cdc28d4d258eaf23d5e0.json  query-4937b47847a35d3518ab615d2a4532edba3ca454b557db0d39071f7d04726403.json  query-4b782bbb60207a852fc3ac73c90c99b26c96b67c9aed5c3c8241b0614d2cda7e.json  query-51252593676519cb6a3d8b1ed31903c54dddb23ddd4ddf4a5228f9776211dbdb.json  query-572ab95297ce9d878566a24d00c9c92ffec2cb390906a9e8e9a72f597b57b075.json  query-784c5853ca3eb3211fc6e36b792df9b28f8a9bb3ffe266d440ee08417daad938.json  query-8d5a26cc78d8eceb046cc77c80bf32726a80689ce3ab7f31487b142d476b7a85.json  query-a372e69795c5ee3dab3948a94bab85f0783011a11064d9578847881f91b7ed82.json  query-b9c9c801837ea36b11aff696ebfad932050cf1cbbab6e1c7689d784dfd59e236.json  query-d0dcd6b9e021aee0b8594ee319229440fa4b88fcda618beaa4dbf4e58f3bfb9d.json  query-d1f685210da64cecdca018e04ee810941d8d52bef48f4aef921a2589eef36d69.json  query-d22d69131efe6e1ea3429006f6853551efde239c2931fa6e79eb5f2bb59f4b70.json  query-d649a71e30a5c39e81343e679d0559edf21e52a72b51f2f4d078aa6bc320c973.json  query-f902ec4a118a823d532fb8f9935fcfcd65d0f072c11b623dd3aef673d2193912.json  query-fe0d3fbf1aa6bbcf263bcae0ea82a7c4cbb3d2bb7f4d06819daac275c51701cf.json
cromptch-ui/: .pre-commit-config.yaml  README.md  app.config.ts  nuxt.config.ts  package-lock.json  package.json
src/: error.rs  main.rs
(+37 files in other folders)
