[package]
name = "cromptch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
base64 = "0.21.2"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = "1.0.164"
shuttle-axum = "0.20.0"
shuttle-runtime = "0.20.0"
shuttle-shared-db = { version = "0.20.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "offline", "uuid", "bigdecimal"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tokio = "1.28.2"
tracing = "0.1.37"
uuid = "1.4.0"
