[package]
name = "cromptch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json", "multipart"] }
dotenv = "0.15"
base64 = "0.21"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
rust-argon2 = "1.0.0"
sqlx = { version = "0.7", features = ["tls-rustls", "runtime-tokio", "postgres", "macros", "chrono", "uuid", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }
tower-http = { version = "0.4", features = ["cors"] }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
uuid = { version = "1.4", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"], default-features = false }
env_logger = "0.10"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
